<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/registerationbg"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_marginBottom="-28dp"
        android:layout_height="48dp"
        android:background="@drawable/arrow"
        android:backgroundTint="@color/BUTTONS"
        android:layout_marginStart="320dp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-17dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/create"
        android:textColor="@color/heading"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/account"
        android:layout_marginStart="30dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/heading"
        android:fontFamily="sans-serif-condensed"
        />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:scaleX="1.2"
        android:scaleY="1.3"
        android:src="@drawable/signuplogo" />

    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:src="@drawable/user"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name1"
            android:textColor="@color/txtcolor"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/username"
        android:inputType="text"
        android:layout_width="270dp"
        android:layout_height="34dp"
        android:layout_marginStart="50dp"
        android:hint="@string/enter_your_name"
        android:padding="8dp"
        android:layout_marginBottom="5dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/txtcolor"
        android:textStyle="bold"
        android:background="@drawable/rounded_shape"
        />
    <LinearLayout
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:src="@drawable/email"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/txtcolor"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="270dp"
        android:layout_height="34dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/enter_your_email"
        android:padding="8dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/txtcolor"
        android:textStyle="bold"
        android:background="@drawable/rounded_shape"
        />
    <LinearLayout
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:src="@drawable/passwordconfirmation"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/txtcolor"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="270dp"
        android:layout_height="34dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/enter_password"
        android:padding="8dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/txtcolor"
        android:textStyle="bold"
        android:background="@drawable/rounded_shape"
        />
    <LinearLayout
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:src="@drawable/pasword"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Password"
            android:textColor="@color/txtcolor"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/passwordconf"
        android:inputType="textPassword"
        android:layout_width="270dp"
        android:layout_height="34dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/enter_your_password_again"
        android:padding="8dp"
        android:textColorHint="@color/grey"
        android:textColor="@color/txtcolor"
        android:textStyle="bold"
        android:background="@drawable/rounded_shape"
        />
    <Button
        android:id="@+id/signup1"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/sandcolor"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/sign_up"
        android:layout_margin="5dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/grey"
            android:backgroundTint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="casual"
            />
        <Button
            android:id="@+id/login1"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:text="@string/log_in"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/sandcolor"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="17sp"
            android:padding="5dp"
            />

    </LinearLayout>

</LinearLayout>
